# MyVKProject

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Shaders/: simple_shader.frag
src/: main.cpp
src/Core/: first_app.cpp  first_app.hpp  lve_device.cpp  lve_device.hpp  lve_game_object.hpp  lve_model.cpp  lve_model.hpp  lve_pipeline.cpp  lve_pipeline.hpp  lve_renderer.cpp  lve_renderer.hpp  lve_swap_chain.cpp  lve_swap_chain.hpp  lve_window.cpp  lve_window.hpp  simple_render_system.cpp  simple_render_system.hpp
src/Core/Graphics/: first_app.cpp  first_app.hpp  lve_device.cpp  lve_device.hpp  lve_imgui.cpp  lve_imgui.hpp  lve_model.cpp  lve_pipeline.cpp  lve_renderer.hpp
src/Core/Graphics/systems/: point_light_system.hpp  simple_render_system.hpp
